tests/error/if_expr_assignment_mismatch.magi
// TEST: Using if expression with incompatible branch types in an assignment should error

main :: () -> i32 {
    v := if true {
        1
    } else {
        1.5
    }

    return 0
}
